--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                 <label for="section1-1" class="accordion__label1">Novi Sad - Centar tamburaske kulture - CTK</label>
                 <div class="accordion__content1">
                   <div class="content1-info">
-                    Umetnicki rukovodilac: Zoran Bugarski Brica
+                    Umetnicki rukovodilac: Zoran Bugarski Bric
                     <a href="http://www.ctk.rs/">Website</a>
                     <a href="https://www.facebook.com/tamburaskicentar">facebook</a>
                     <a href="https://www.instagram.com/centar.tamburaske.kulture.ns/">Instagram</a>
