--- a/index.html
+++ b/index.html
@@ -144,5 +144,10 @@
         </div>
       </div>
     </div>
+
+    <div class="footer">
+      <div class="kontakt">Kontakt: tamburicaradio@gmail.com</div>
+
+    </div>
   </body>
 </html>
