--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     <div class="accordion-container">
       <div class="accordion">
         <div>
-          <input type="radio" name="example_accordion" id="section1" class="accordion__input">
+          <input type="checkbox" name="example_accordion" id="section1" class="accordion__input">
           <label for="section1" class="accordion__label">ŠKOLE TAMBURICE</label>
           <div class="accordion__content">
             <div class="accordion">
@@ -93,7 +93,7 @@
           </div>
         </div>
         <div>
-          <input type="radio" name="example_accordion" id="section2" class="accordion__input">
+          <input type="checkbox" name="example_accordion" id="section2" class="accordion__input">
           <label for="section2" class="accordion__label">U SVETU TAMBURICE</label>
           <div class="accordion__content">
             <p>Section #2</p>
@@ -103,7 +103,7 @@
           </div>
         </div>
         <div>
-          <input type="radio" name="example_accordion" id="section3" class="accordion__input">
+          <input type="checkbox" name="example_accordion" id="section3" class="accordion__input">
           <label for="section3" class="accordion__label">TAMBURAŠKE NOĆI</label>
           <div class="accordion__content">
             <p>Section #3</p>
@@ -113,7 +113,7 @@
           </div>
         </div>
         <div>
-          <input type="radio" name="example_accordion" id="section4" class="accordion__input">
+          <input type="checkbox" name="example_accordion" id="section4" class="accordion__input">
           <label for="section4" class="accordion__label">TAMBURAŠA VINA</label>
           <div class="accordion__content">
             <p>Section #4</p>
@@ -123,7 +123,7 @@
           </div>
         </div>
         <div>
-          <input type="radio" name="example_accordion" id="section5" class="accordion__input">
+          <input type="checkbox" name="example_accordion" id="section5" class="accordion__input">
           <label for="section5" class="accordion__label">TAMBURAŠKA KUHINJA</label>
           <div class="accordion__content">
             <p>Section #5</p>
@@ -133,7 +133,7 @@
           </div>
         </div>
         <div>
-          <input type="radio" name="example_accordion" id="section6" class="accordion__input">
+          <input type="checkbox" name="example_accordion" id="section6" class="accordion__input">
           <label for="section6" class="accordion__label">TAMBURAŠKA ODMARALIŠTA</label>
           <div class="accordion__content">
             <p>Section #6</p>
@@ -149,5 +149,123 @@
       <div class="kontakt">Kontakt: tamburicaradio@gmail.com</div>
 
     </div>
+
+    <script>
+      function click1() {
+        if (document.getElementById("section2").checked) {
+          document.getElementById("section2").checked = false;
+        }
+        if (document.getElementById("section3").checked) {
+          document.getElementById("section3").checked = false;
+        }
+        if (document.getElementById("section4").checked) {
+          document.getElementById("section4").checked = false;
+        }
+        if (document.getElementById("section5").checked) {
+          document.getElementById("section5").checked = false;
+        }
+        if (document.getElementById("section6").checked) {
+          document.getElementById("section6").checked = false;
+        }
+      }
+
+      function click2() {
+        if (document.getElementById("section1").checked) {
+          document.getElementById("section1").checked = false;
+        }
+        if (document.getElementById("section3").checked) {
+          document.getElementById("section3").checked = false;
+        }
+        if (document.getElementById("section4").checked) {
+          document.getElementById("section4").checked = false;
+        }
+        if (document.getElementById("section5").checked) {
+          document.getElementById("section5").checked = false;
+        }
+        if (document.getElementById("section6").checked) {
+          document.getElementById("section6").checked = false;
+        }
+      }
+
+      function click3() {
+        if (document.getElementById("section1").checked) {
+          document.getElementById("section1").checked = false;
+        }
+        if (document.getElementById("section2").checked) {
+          document.getElementById("section2").checked = false;
+        }
+        if (document.getElementById("section4").checked) {
+          document.getElementById("section4").checked = false;
+        }
+        if (document.getElementById("section5").checked) {
+          document.getElementById("section5").checked = false;
+        }
+        if (document.getElementById("section6").checked) {
+          document.getElementById("section6").checked = false;
+        }
+      }
+
+      function click4() {
+        if (document.getElementById("section1").checked) {
+          document.getElementById("section1").checked = false;
+        }
+        if (document.getElementById("section2").checked) {
+          document.getElementById("section2").checked = false;
+        }
+        if (document.getElementById("section3").checked) {
+          document.getElementById("section3").checked = false;
+        }
+        if (document.getElementById("section5").checked) {
+          document.getElementById("section5").checked = false;
+        }
+        if (document.getElementById("section6").checked) {
+          document.getElementById("section6").checked = false;
+        }
+      }
+
+      function click5() {
+        if (document.getElementById("section1").checked) {
+          document.getElementById("section1").checked = false;
+        }
+        if (document.getElementById("section2").checked) {
+          document.getElementById("section2").checked = false;
+        }
+        if (document.getElementById("section3").checked) {
+          document.getElementById("section3").checked = false;
+        }
+        if (document.getElementById("section4").checked) {
+          document.getElementById("section4").checked = false;
+        }
+        if (document.getElementById("section6").checked) {
+          document.getElementById("section6").checked = false;
+        }
+      }
+
+      function click6() {
+        if (document.getElementById("section1").checked) {
+          document.getElementById("section1").checked = false;
+        }
+        if (document.getElementById("section2").checked) {
+          document.getElementById("section2").checked = false;
+        }
+        if (document.getElementById("section3").checked) {
+          document.getElementById("section3").checked = false;
+        }
+        if (document.getElementById("section4").checked) {
+          document.getElementById("section4").checked = false;
+        }
+        if (document.getElementById("section5").checked) {
+          document.getElementById("section5").checked = false;
+        }
+      }
+
+
+      document.getElementById("section1").onchange = click1;
+      document.getElementById("section2").onchange = click2;
+      document.getElementById("section3").onchange = click3;
+      document.getElementById("section4").onchange = click4;
+      document.getElementById("section5").onchange = click5;
+      document.getElementById("section6").onchange = click6;
+    </script>
   </body>
 </html>
