--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       <div class="accordion">
         <div>
           <input type="checkbox" name="example_accordion" id="section1" class="accordion__input">
-          <label for="section1" class="accordion__label">ŠKOLE TAMBURICE</label>
+          <label for="section1" class="accordion__label">ŠKOLE TAMBURE</label>
           <div class="accordion__content">
             <div class="accordion">
               <div>
@@ -94,7 +94,7 @@
         </div>
         <div>
           <input type="checkbox" name="example_accordion" id="section2" class="accordion__input">
-          <label for="section2" class="accordion__label">U SVETU TAMBURICE</label>
+          <label for="section2" class="accordion__label">U SVETU TAMBURE</label>
           <div class="accordion__content">
             <p>Section #2</p>
             <p>
